# E-Dokter-Rust

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
edokter-service/: .env.example  Cargo.toml
edokter-service/src/: bpjs_crypto.rs  bpjs_service.rs  main.rs
edokter-service/src/handlers/: ai.rs  auth.rs  bpjs.rs  dashboard.rs  lab.rs  mod.rs  monitoring.rs  poliklinik.rs  prescription.rs  queue.rs  radiology.rs  ranap.rs  registration.rs  results.rs  resume.rs  soap.rs
edokter-service/src/models/: lab.rs  mod.rs  prescription.rs  radiology.rs  results.rs  resume.rs  soap.rs
edokter-service/src/services/: bpjs_service.rs  mod.rs
src/: middleware.ts
src/app/: global.css  layout.tsx  page.tsx
src/app/igd/: page.tsx
src/app/igd/pemeriksaan/: actions.ts
src/app/login/: actions.ts  page.tsx
src/app/pasien-rawat-inap/: actions.ts  page.tsx
src/app/pasien-rawat-jalan/: actions.ts  page.tsx
src/app/pemeriksaan/[...id]/: page.tsx
src/app/resep/: page.tsx
src/components/dashboard/: DashboardCharts.tsx
src/components/pemeriksaan/: AturanPakaiSelect.tsx  IcareButton.tsx  QueueTable.tsx  SoapForm.tsx
src/components/pemeriksaan/ai/: AiQuickNotes.tsx  AiSbarHandover.tsx
src/components/pemeriksaan/tabs/: AsesmenIgdTab.tsx  HasilLabTab.tsx  HasilRadTab.tsx  IcdTab.tsx  LabTab.tsx  PeriksaLabInap.tsx  PeriksaRadInap.tsx  PrescriptionTab.tsx  RadiologiTab.tsx  ResepInapTab.tsx  ResumeInapTab.tsx  ResumeTab.tsx  SoapTab.tsx  TriageTab.tsx  (+1 more)
src/components/ui/: Sidebar.tsx
(+20 files in other folders)
